src/objects/IntegrationFrameworkJSONDefinition__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Determine the fields to include in the JSON object representation on the Integration Framework</description>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <description>Geography</description>
        <label>Geo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoB__c</fullName>
        <description>Line of Business</description>
        <label>LoB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Market</description>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Fields__c</fullName>
        <description>List of the API name of object fields separated with a coma.</description>
        <label>Object Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Event__c</fullName>
        <label>Sub-Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Framework JSON Definition</label>
</CustomObject>